Sound applet: Fix control buttons being squashed.

--- a/usr/share/themes/Linux Mint/cinnamon/cinnamon.css
+++ b/usr/share/themes/Linux Mint/cinnamon/cinnamon.css
@@ -1793,7 +1793,7 @@ StScrollBar StButton#vhandle:hover
 
 .sound-player StButton {
     width: 22px;
-    height: 13px;
+    height: 22px;
     padding: 5px;
     color: #bbb;
 }
