--- a/usr/share/themes/Mint-X-Teal/cinnamon/cinnamon.css
+++ b/usr/share/themes/Mint-X-Teal/cinnamon/cinnamon.css
@@ -1969,7 +1969,7 @@ StScrollBar StButton#vhandle:hover {
  * ===================================================================*/
 .sound-player StButton {
     width: 22px;
-    height: 13px;
+    height: 22px;
     padding: 5px;
     color: #bbb;
 }
