--- a/usr/share/themes/Mint-X/cinnamon/cinnamon.css
+++ b/usr/share/themes/Mint-X/cinnamon/cinnamon.css
@@ -1983,7 +1983,7 @@ StScrollBar StButton#vhandle:hover {
  * ===================================================================*/
 .sound-player StButton {
     width: 22px;
-    height: 13px;
+    height: 22px;
     padding: 5px;
     color: #bbb;
 }
